--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <header>
     <h1><span style="color:#2e86de;">Vibha General Medicine Clinic</span></h1>
-    <p>Neurology & Eye Care by Experts</p>
+    <p><span style="color:#2e86de;">Neurology & Eye Care by Experts</p>
   </header>
 
   <div class="container">
